# elec-tracker-pe

./: diccionario_hiperparametros_pea.txt  git_sync.sh  instructions.txt  pyproject.toml  requirements.txt  run_dashboard_todos.sh  run_pipeline.sh  run_projector.sh  run_scraper_todos.sh  run_stream_builder.sh  stopear_elec_service.sh
.devcontainer/: devcontainer.json
data_stream/: .~lock.onpe_todos_latest.csv#  actas.csv  onpe_todos_latest.csv  proyeccion_final_latest.csv  ubigeo_estructura.json
src/elec_tracker_pe/: affinity_calculator.py  anomaly_plotter.py  assign_centroids.py  auditor.py  config.py  core.py  core_master.py  core_todos.py  dashboard.py  dashboard_publico.py  mapper_ubigeo.py  projector.py  stream_builder.py  test_name_prov.py  utils.py  utils_graphs.py
